fix: review fixes 2

--- a/example.env
+++ b/example.env
@@ -1,4 +1,6 @@
 BOT_TOKEN=6900329976:AAHYO4ofV09YD7pCESzEYx3jo61d5m5ayao
 ABSTRACT_API_KEY=5025cbc87f3044148ffc6090feb6ee2d
 BASE_URL=https://holidays.abstractapi.com/v1/
+BOT_DEBUG=true
+UPDATE_CONFIG_TIMEOUT=60
 
