--- a/example.env
+++ b/example.env
@@ -1,7 +1,15 @@
 BOT_TOKEN=6900329976:AAHYO4ofV09YD7pCESzEYx3jo61d5m5ayao
-ABSTRACT_API_KEY=5025cbc87f3044148ffc6090feb6ee2d
+
+HOLIDAY_API_KEY=5025cbc87f3044148ffc6090feb6ee2d
 WEATHER_API_KEY=b55171bd3450410aa5080829410b2841
-BASE_ABSTRACT_URL=https://holidays.abstractapi.com/v1/
+BASE_HOLIDAY_URL=https://holidays.abstractapi.com/v1/
 BASE_WEATHER_URL=https://api.openweathermap.org/data/2.5/weather/
+
 BOT_DEBUG=true
 UPDATE_CONFIG_TIMEOUT=60
+
+MONGO_INITDB_ROOT_USERNAME=root
+MONGO_INITDB_ROOT_PASSWORD=password
+
+MONGODB_LOCAL_URI=mongodb://root:password@localhost:6000
+
