--- a/example.env
+++ b/example.env
@@ -12,4 +12,9 @@ MONGO_INITDB_ROOT_USERNAME=root
 MONGO_INITDB_ROOT_PASSWORD=password
 
 MONGODB_LOCAL_URI=mongodb://root:password@localhost:6000
+COLLECTION=subscription
+DATABASE=bot
 
+WORKER_DURATION=30
+
+RUN=bot
